Printouts selection componenet added to asset details panel
