# server/immich-openapi-specs.json
@@ -2070,6 +2070,66 @@
         ]
       }
     },
+    "/asset/{id}/copies": {
+      "put": {
+        "operationId": "updateCopies",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "format": "uuid",
+              "type": "string"
+            }
+          },
+          {
+            "name": "key",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateAssetCopiesDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AssetResponseDto"
+                }
+              }
+            },
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          },
+          {
+            "cookie": []
+          },
+          {
+            "api_key": []
+          }
+        ],
+        "tags": [
+          "Asset"
+        ]
+      }
+    },
     "/audit/deletes": {
       "get": {
         "operationId": "getAuditDeletes",
@@ -5219,9 +5279,15 @@
           "isFavorite": {
             "type": "boolean"
           },
+          "largeCopies": {
+            "type": "number"
+          },
           "livePhotoVideoId": {
             "nullable": true,
             "type": "string"
+          },
+          "mediumCopies": {
+            "type": "number"
           },
           "originalFileName": {
             "type": "string"
@@ -5243,6 +5309,9 @@
           },
           "resized": {
             "type": "boolean"
+          },
+          "smallCopies": {
+            "type": "number"
           },
           "smartInfo": {
             "$ref": "#/components/schemas/SmartInfoResponseDto"
@@ -5282,7 +5351,10 @@
           "isFavorite",
           "isArchived",
           "duration",
-          "checksum"
+          "checksum",
+          "smallCopies",
+          "mediumCopies",
+          "largeCopies"
         ],
         "type": "object"
       },
@@ -7483,6 +7555,20 @@
         },
         "type": "object"
       },
+      "UpdateAssetCopiesDto": {
+        "properties": {
+          "largeCopies": {
+            "type": "number"
+          },
+          "mediumCopies": {
+            "type": "number"
+          },
+          "smallCopies": {
+            "type": "number"
+          }
+        },
+        "type": "object"
+      },
       "UpdateAssetDto": {
         "properties": {
           "description": {
@@ -7493,6 +7579,15 @@
           },
           "isFavorite": {
             "type": "boolean"
+          },
+          "largeCopies": {
+            "type": "number"
+          },
+          "mediumCopies": {
+            "type": "number"
+          },
+          "smallCopies": {
+            "type": "number"
           }
         },
         "type": "object"
