# server/src/domain/asset/response-dto/asset-response.dto.ts
@@ -33,6 +33,9 @@ export class AssetResponseDto {
   people?: PersonResponseDto[];
   /**base64 encoded sha1 hash */
   checksum!: string;
+  smallCopies!: number;
+  mediumCopies!: number;
+  largeCopies!: number;
 }
 
 function _map(entity: AssetEntity, withExif: boolean): AssetResponseDto {
@@ -59,6 +62,9 @@ function _map(entity: AssetEntity, withExif: boolean): AssetResponseDto {
     tags: entity.tags?.map(mapTag),
     people: entity.faces?.map(mapFace).filter((person) => !person.isHidden),
     checksum: entity.checksum.toString('base64'),
+    smallCopies: entity.smallCopies,
+    mediumCopies: entity.mediumCopies,
+    largeCopies: entity.largeCopies
   };
 }
 
